Fri Mar 20 01:54:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Validate_Client/Makefile.am:

          Fix for automake builds.
        
Thu Mar 19 18:34:18 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
        * orbsvcs/Notify_Service/README:

          Add text to describe the new validate_client functionality.

        * orbsvcs/tests/Notify/Validate_Client/run_test.pl:

          clean up all the intermediate files at the end of the test.

Thu Mar 19 15:16:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/MProfile.cpp:
          Const change

        * tao/Profile.cpp:
          Layout change

        * tao/ZIOP/ZIOP_ORBInitializer.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.h:
          Added a ZIOP sc handler that transfers the ZIOP enabled and
          idlevellist policy from the client to the server. These
          are transmitted through the Messaging Invocation Policies which
          aren't supported yet by TAO. We have to make some changes to
          the core and pluggable transports to make all reply and
          request service contexts available on all places.

        * tao/Makefile.am:
          Added new files

Thu Mar 19 13:49:23 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * configure.ac:
        * orbsvcs/tests/Notify/Makefile.am:

          Add new build to the automake files.

        * orbsvcs/tests/Notify/Validate_Client/Makefile.am:
        * orbsvcs/tests/Notify/Validate_Client/README:
        * orbsvcs/tests/Notify/Validate_Client/Validate_Client.mpc:
        * orbsvcs/tests/Notify/Validate_Client/proxy_dummy.cpp:
        * orbsvcs/tests/Notify/Validate_Client/run_test.pl:

          Added a server that generates the persistence file for the
          notify service that is uses locally created references. This
          should ensure that the validator feature will actually get a